--- a/src/scss/blocks/header/_header.scss
+++ b/src/scss/blocks/header/_header.scss
@@ -1,43 +1,120 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 150px;
-    padding: 0 100px;
-    &__left-block {
-        display: flex;
-        justify-content: space-between;
-        min-width: 550px;
+nav {
+  height: 110px;
+  width: 100%;
+  background: #282827;
+  display: flex;
+  flex-direction: row;
+
+
+}
+
+.background__header {
+  //   position: absolute;
+  max-width: 1920px;
+  height: 980px;
+  left: 0px;
+  top: 0px;
+  z-index: -5;
+  background: #282827;
+}
+
+.menu {
+
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  display: flex;
+  justify-content: center;
+  padding: 46px 0px 45px 0px;
+  margin-left: 310px;
+  list-style-type: none;
+
+  &__contacts_phone {
+    margin-top: 43px;
+    margin-left: 55px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: right;
+    color: #E3E3E2;
+
+    a {
+      text-decoration: none;
+
+      &:hover {
+
+        color: #999;
+      }
     }
-    &__logo {
-        max-width: 170px;
-        img {
-            width: 100%;
-        }
+
+  }
+
+  &__hr-under {
+    width: 1440px;
+    height: 2px;
+    border: none;
+    background: #40403D;
+    transform: matrix(1, 0, 0, -1, 0, 0);
+  }
+
+  &__logo_img {
+    margin-top: 37px;
+    width: 164px;
+    height: 36px;
+
+    &:hover {
+      text-decoration: none;
+      scale: 1.2;
     }
-    &__links {
-        display: flex;
-        align-items: center;
+
+
+  }
+
+  &__icon {
+    margin-top: 44px;
+    margin-left: 20px;
+    width: 26px;
+    height: 22px;
+  }
+
+  &__hr {
+    margin-top: 20px;
+    margin-left: 40px;
+    width: 2px;
+    height: 70px;
+    background: #40403D;
+    border: none;
+  }
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      color: #999;
     }
-    &__link {
-        position: relative;
-        margin-right: 45px;
-        font-weight: bold;
-        font-size: 18px;
-        color: $dark;
-        &:after {
-            content: '';
-            position: absolute;
-            display: block;
-            width: 110%;
-            left: -5%;
-            bottom: -1px;
-            z-index: -1;
-            height: 8px;
-            background: $primary;
-        }
-        &:last-child {
-            margin-right: 0;
-        }
+
+
+  }
+
+  &_link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    color: #E3E3E2;
+  }
+
+  &_item {
+    padding-left: 60px;
+
+    &:first-child {
+      padding-left: 0px;
     }
+  }
+
+
+
 }
