--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,15 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 @import './variables/variables';
 @import './base.scss';
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/_bootstrap-grid.min';
 
 @import './blocks/header/header.scss';
-@import './blocks/sidepanel/sidepanel';
-@import './blocks/preview/preview';
-@import './blocks/offer/offer';
-@import './blocks/calculating/calculating';
-@import './blocks/menu/menu';
-@import './blocks/order/order';
-@import './blocks/promotion/promotion';
-@import './blocks/footer/footer';
-@import './blocks/modal/modal';
-
+@import './blocks/first_screen/first_screen.scss';
+@import './media.scss';
