--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,4 +6,5 @@
 
 @import './blocks/header/header.scss';
 @import './blocks/first_screen/first_screen.scss';
+@import './blocks/services/services.scss';
 @import './media.scss';
