--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -2,3 +2,5 @@ $ambience-white: #E3E3E2;
 $industrial-revolution: #727272;
 $balsamic-reduction: #40403D;
 $background-eternity: #282827;
+$titanium-white: #E5E5E5;
+$holland-red: #CB4544;
