--- a/src/scss/blocks/services/services.scss
+++ b/src/scss/blocks/services/services.scss
@@ -87,6 +87,8 @@
   }
 
   &__btn {
+      position: absolute;
+      margin-left: 1230px;
     width: 208px;
     height: 56px;
     text-align: center;
