--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,4 +7,5 @@
 @import './blocks/header/header.scss';
 @import './blocks/first_screen/first_screen.scss';
 @import './blocks/services/services.scss';
+@import './blocks/approach/approach.scss';
 @import './media.scss';
