--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,4 +8,5 @@
 @import './blocks/first_screen/first_screen.scss';
 @import './blocks/services/services.scss';
 @import './blocks/approach/approach.scss';
+@import './blocks/migration/migrate.scss';
 @import './media.scss';
