--- a/src/scss/blocks/header/_header.scss
+++ b/src/scss/blocks/header/_header.scss
@@ -10,7 +10,7 @@ nav {
 
 .background__header {
   //   position: absolute;
-  max-width: 1920px;
+  width: 100%;
   height: 980px;
   left: 0px;
   top: 0px;
