--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -43,11 +43,11 @@ a {
 //     }
 // }
 
-// .container {
+.container {
    
-//     // max-width: 1200px;
-//     margin: 0 auto;
-// }
+    // max-width: 1200px;
+    margin: 0 auto;
+}
 
 // .divider {
 //     width: 330px;
