--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,4 +9,5 @@
 @import './blocks/services/services.scss';
 @import './blocks/approach/approach.scss';
 @import './blocks/migration/migrate.scss';
+@import './blocks/costs/costs.scss';
 @import './media.scss';
