--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,6 @@
 @import './blocks/services/services.scss';
 @import './blocks/approach/approach.scss';
 @import './blocks/migration/migrate.scss';
+@import './blocks/footer/footer.scss';
 @import './blocks/costs/costs.scss';
 @import './media.scss';
