--- a/src/scss/blocks/approach/approach.scss
+++ b/src/scss/blocks/approach/approach.scss
@@ -1,6 +1,13 @@
 .approach {
-  height: 1027px;
+  min-height: 1027px;
   background: $background-eternity;
+  // &__hr-under {
+  //   width: auto;
+  //   height: 2px;
+  //   border: none;
+  //   background: $balsamic-reduction;
+  //   transform: matrix(1, 0, 0, -1, 0, 0);
+  // }
 
   &__h2 {
 
