--- a/src/scss/blocks/services/services.scss
+++ b/src/scss/blocks/services/services.scss
@@ -2,7 +2,7 @@
   margin-top: 496px;
   display: flex;
   flex-direction: column;
-  height: 681px;
+  min-height: 681px;
 
   &__head {
     display: flex;
