--- a/src/scss/blocks/services/services.scss
+++ b/src/scss/blocks/services/services.scss
@@ -3,7 +3,16 @@
   display: flex;
   flex-direction: column;
   min-height: 681px;
-
+  &__redsquare {
+    display: none;
+    margin: 30px auto 0 auto;
+    
+    background-color: $holland-red;
+   
+    width: 14px;
+    height: 14px;
+    
+  }
   &__head {
     display: flex;
     justify-content: space-between;
