--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -6,27 +6,105 @@
 }
 
 @media (max-width: 1495px) {
-  .migration {
-    &__grid {
-      grid-template-columns: repeat(auto-fit,579px);
-      column-gap: 62px;
-    grid-auto-rows: auto;
+  .costs {
+    &__columns {
+      &_item {
+        margin-left: 0;
+      }
+      &_item {
+        margin-left: 70px;
+
+        &-name {
+
+          &::before {
+            height: 120px;
+          }
+
+
+        }
+      }
+
+      &_h2 {
+        width: 100%;
+      }
+
+      img {
+        position: relative;
+        margin: 0 auto;
+        margin-top: 100px;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+
+      &_item {
+        &-hr {
+          width: 100%;
+
+        }
+      }
+
+      // &:nth-child(1) {
+      //   margin-left: 10px;
+      // }
     }
+  }
+
+  .migration {
+    &__column {
+      &:nth-child(2) {
+        margin-left: 80px;
+      }
+
+      &:nth-child(3) {
+        margin-left: 80px;
+      }
+
+      &:nth-child(4) {
+        margin-left: 80px;
+      }
+    }
+
+    &__grid {
+      grid-template-columns: repeat(auto-fit, 579px);
+      column-gap: 62px;
+      grid-auto-rows: auto;
+
+      &_element-progresbar-1::after {
+        width: 340px;
+      }
+
+      &_element-progresbar-2::after {
+        width: 400px;
+      }
+
+      &_element-progresbar-3::after {
+        width: 454px;
+      }
+
+      &_element-progresbar-4::after {
+        width: 245px;
+      }
+    }
+
     &__grid_element {
-      
+
       img {
         object-fit: none;
         width: 100%;
-        
+
       }
+
       &-descr {
         width: 100%;
       }
+
       &-header {
         width: 100%;
       }
     }
   }
+
   .services {
     &__column {
       &:nth-child(2) {
@@ -79,12 +157,14 @@
       position: relative;
       margin-left: 0;
     }
+
     &__column {
 
       width: 50%;
+
       &_descr {
         width: 100%;
-        
+
       }
     }
   }
@@ -118,23 +198,59 @@
     max-width: 1160px;
   }
 
+  .costs {
+    &__columns {
+
+      &_item {
+        margin-left: 50px;
+      }
+
+      img {
+
+        // height: 700px;
+      }
+    }
+  }
+
   .migration {
+    &__column {
+      &::before {
+        transform: translate(-22px, -40px);
+      }
+
+      &:nth-child(2) {
+        margin-left: 30px;
+      }
+
+      &:nth-child(3) {
+        margin-left: 30px;
+      }
+
+      &:nth-child(4) {
+        margin-left: 30px;
+      }
+    }
+
     &__grid {
-      grid-template-columns: repeat(auto-fit,539px);
-      column-gap: 64px;
-    grid-auto-rows: auto;
-    &_element-progresbar-1::after {
-      width: 300px;
-    }
-    &_element-progresbar-2::after {
-      width: 359px;
-    }
-    &_element-progresbar-3::after {
-      width: 413px;
-    }
-    &_element-progresbar-4::after {
-      width: 204px;
-    }
+      grid-template-columns: repeat(auto-fit, 539px);
+      column-gap: 58px;
+      grid-auto-rows: auto;
+
+      &_element-progresbar-1::after {
+        width: 300px;
+      }
+
+      &_element-progresbar-2::after {
+        width: 359px;
+      }
+
+      &_element-progresbar-3::after {
+        width: 413px;
+      }
+
+      &_element-progresbar-4::after {
+        width: 204px;
+      }
     }
   }
 
@@ -189,11 +305,78 @@
 }
 
 @media (max-width: 1173px) {
+  .costs {
+    &__columns {
+
+      &_item {
+        margin-left: 35px;
+      }
+
+      img {
+        object-fit: cover;
+        width: 520px;
+        height: 520px;
+      }
+
+    }
+  }
 
   // nav {
   //     display: flex;
   //     justify-content: space-around;
   // }
+  .migration {
+    &__column {
+      width: 205px;
+
+      &_descr {
+        width: 100%;
+      }
+
+      // &::before {
+      //   transform: translate(-22px, -40px);
+      // }
+      // &:nth-child(2) {
+      //   margin-left: 30px;
+      // }
+      // &:nth-child(3) {
+      //   margin-left: 30px;
+      // }
+      // &:nth-child(4) {
+      //   margin-left: 30px;
+      // }
+    }
+
+    &__grid {
+
+      grid-template-columns: repeat(auto-fit, 510px);
+      column-gap: 40px;
+
+      // grid-auto-rows: auto;
+      &_element-progresbar-1::after {
+        width: 271px;
+      }
+
+      &_element-progresbar-2::after {
+        width: 331px;
+      }
+
+      &_element-progresbar-3::after {
+        width: 383px;
+      }
+
+      &_element-progresbar-4::after {
+        width: 175px;
+      }
+
+      &_element {
+        img {
+          height: 319px;
+        }
+      }
+    }
+  }
+
   .itmigration {
     &__col-2 {
       margin-left: 26px;
@@ -243,11 +426,60 @@
 }
 
 @media (max-width: 1103px) {
+  .costs {
+    &__columns {
+
+      &_item {
+        margin-left: 30px;
+      }
+
+      img {
+        
+        width: 420px;
+        height: 520px;
+      }
+
+    }
+  }
+
+  .migration {
+
+    &__grid {
+
+      grid-template-columns: repeat(auto-fit, 417px);
+      column-gap: 40px;
+
+      // grid-auto-rows: auto;
+      &_element-progresbar-1::after {
+        width: 178px;
+      }
+
+      &_element-progresbar-2::after {
+        width: 237px;
+      }
+
+      &_element-progresbar-3::after {
+        width: 290px;
+      }
+
+      &_element-progresbar-4::after {
+        width: 83px;
+      }
+
+      &_element {
+        img {
+          height: 296px;
+        }
+      }
+    }
+  }
+
   .approach {
     &__h2 {
       height: 100%;
     }
   }
+
   .services {
 
     &__column {
@@ -324,6 +556,62 @@
     max-width: 876px;
   }
 
+  .costs {
+    &__columns {
+
+      &_item {
+        margin-left: 30px;
+      }
+
+      img {
+        width: 380px;
+        height: 520px;
+      }
+
+    }
+  }
+
+  .migration {
+
+    &__grid {
+
+      grid-template-columns: repeat(auto-fit, 350px);
+      column-gap: 25px;
+
+      // grid-auto-rows: auto;
+      &_element-progresbar-1::after {
+        width: 112px;
+      }
+
+      &_element-progresbar-2::after {
+        width: 170px;
+      }
+
+      &_element-progresbar-3::after {
+        width: 225px;
+      }
+
+      &_element-progresbar-4::after {
+        width: 14px;
+      }
+
+      &_element {
+
+        img {
+          height: 250px;
+        }
+      }
+
+      &_element:nth-child(1) {
+        margin-bottom: 0;
+      }
+
+      &_element:nth-child(2) {
+        margin-bottom: 0;
+      }
+    }
+  }
+
   .itmigration {
     &__h1 {
       width: 427px;
@@ -345,14 +633,42 @@
 }
 
 @media (max-width: 861px) {
+
+  .costs {
+    min-height: 1193px;
+    &__columns {
+      &_item:first-child {
+        margin-top: 69px;
+    }
+      &_item {
+        margin-left: 0;
+        &-name::before {
+         
+          height: 90px;
+      }
+      }
+      width: 100%;
+      // &_item {
+      //   margin-left: 30px;
+      // }
+
+      img {
+        display: none;
+      }
+
+    }
+  }
+
   .approach {
     &__h2 {
       width: auto;
     }
+
     &__h2 {
       margin-right: 20px;
     }
   }
+
   .services {
     margin-top: 238px;
   }
@@ -383,32 +699,91 @@
 }
 
 @media (max-width: 767px) {
-  .approach {
-    min-height: 1158px;
+  .migration {
     &__head {
       flex-direction: column;
       // position: relative;
     }
-    #approach__btn {
-      
-     
+
+    #migration__btn {
+
+
       margin-top: 20px;
     }
+
+    &__grid {
+      display: block;
+      flex-wrap: wrap;
+      margin: 0 auto;
+
+      //   grid-template-columns: repeat(auto-fit,650px);
+      //   column-gap: 0;
+      // // grid-auto-rows: auto;
+      &_element-progresbar-1::after {
+        width: 40vw;
+      }
+
+      &_element-progresbar-2::after {
+        width: 170px;
+      }
+
+      &_element-progresbar-3::after {
+        width: 225px;
+      }
+
+      &_element-progresbar-4::after {
+        width: 14px;
+      }
+
+      &_element {
+
+        img {
+          // object-fit: cover;
+          // height: 500px;
+
+          position: relative;
+          margin: 0 auto;
+          margin-top: 30px;
+          object-fit: contain;
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+    }
+  }
+
+  .approach {
+    min-height: 1158px;
+
+    &__head {
+      flex-direction: column;
+      // position: relative;
+    }
+
+    #approach__btn {
+
+
+      margin-top: 20px;
+    }
+
     &__column_progressbar-4 {
       width: 209px;
     }
   }
+
   .services {
-    
-      min-height: 768px;
+
+    min-height: 768px;
+
     &__head {
       flex-direction: column;
     }
 
     #services__btn {
-      
+
       margin-top: 20px;
-      
+
     }
 
   }
@@ -474,6 +849,44 @@
 
 }
 
+@media (max-width: 670px) {
+
+  .costs {
+    min-height: 1193px;
+    &__columns {
+      &_item {
+        
+        &-name::before {
+         
+          height: 120px;
+      }
+      }
+  
+
+    }
+  }
+
+  .migration {
+    &__columns {
+      flex-wrap: wrap;
+    }
+
+    &__column {
+      margin-top: 120px;
+      width: 210px;
+
+      &_descr {
+        width: 100%;
+      }
+
+      &:nth-child(3) {
+        margin-left: 40px;
+      }
+
+    }
+  }
+}
+
 @media (max-width: 644px) {
   .container {
     max-width: 580px;
@@ -486,6 +899,7 @@
     }
 
   }
+
 
   // .itmigration {
   //   &__imgbig {
@@ -502,11 +916,13 @@
     &__columns {
       flex-wrap: wrap;
     }
+
     &__column {
       margin-top: 20px;
       width: 48%;
+
       &_descr {
-        
+
         height: 100%;
       }
     }
@@ -515,6 +931,7 @@
 
 @media (max-width: 567px) {
   .services {
+
     // &__head {
     //   height: 100%;
     // }
@@ -524,40 +941,46 @@
       text-align: center;
 
     }
+
     margin-top: 201px;
+
     #services__btn {
       display: block;
       margin: 0 auto;
       margin-top: 20px;
-      
+
     }
   }
 
   .approach {
     &__h2 {
       font-size: 36px;
-line-height: 49px;
-text-align: center;
+      line-height: 49px;
+      text-align: center;
     }
+
     #approach__btn {
-      
+
       display: block;
       margin: 0 auto;
       margin-top: 20px;
     }
- 
+
     &__row {
-      
+
       flex-direction: column;
     }
+
     &__column {
       display: block;
       margin: 0 auto;
       width: 100%;
-      
+
     }
+
     &__column:nth-child(even) {
       margin-left: auto;
+
       &::before {
         display: none;
       }
@@ -592,6 +1015,105 @@ text-align: center;
 
 }
 
+@media (max-width: 530px) {
+  .migration {
+    &__head_second {
+      flex-direction: column;
+      // position: relative;
+    }
+
+    &__h2 {
+      display: block;
+      margin: 0 auto;
+    }
+
+    #migration__btn-second {
+      display: block;
+      margin: 0 auto;
+      margin-top: 20px;
+    }
+
+    &__columns {
+      display: block;
+      margin: 0 auto;
+    }
+
+    &__column {
+      display: block;
+
+      margin-top: 120px;
+      width: 210px;
+
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+
+      &_descr {
+        width: 100%;
+      }
+
+      &::before {
+        display: none;
+      }
+
+      &:nth-child(1) {
+        margin: 0 auto;
+        margin-top: 120px;
+
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          height: 2px;
+          width: 290px;
+          transform: translate(-42px, 54px);
+          background-color: $titanium-white;
+
+        }
+      }
+
+      &:nth-child(2) {
+        margin: 0 auto;
+        margin-top: 120px;
+
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          height: 2px;
+          width: 290px;
+          transform: translate(-42px, 74px);
+          background-color: $titanium-white;
+
+        }
+      }
+
+      &:nth-child(3) {
+        margin: 0 auto;
+        margin-top: 120px;
+
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          height: 2px;
+          width: 290px;
+          transform: translate(-42px, 50px);
+          background-color: $titanium-white;
+
+        }
+      }
+
+      &:nth-child(4) {
+        margin: 0 auto;
+        margin-top: 120px;
+      }
+
+    }
+  }
+}
+
 @media (max-width: 503px) {
   .services {
     margin-top: 153px;
@@ -608,27 +1130,32 @@ text-align: center;
     &__column_head::after {
       display: none;
     }
+
     &__redsquare {
       display: block;
-      
+
     }
+
     &__column {
       margin-top: 20px;
       width: 100%;
+
       &_head {
         display: block;
         margin: 0 auto;
         margin-top: 40px;
       }
+
       img {
         display: block;
         margin: 0 auto;
       }
+
       &_descr {
         margin-top: 55px;
         width: 100%;
         height: 100%;
-        
+
       }
     }
   }
@@ -650,7 +1177,7 @@ text-align: center;
     }
   }
 
-  
+
 
   // .hamburger {
   //   &::before {
