--- a/src/scss/blocks/footer/footer.scss
+++ b/src/scss/blocks/footer/footer.scss
@@ -205,7 +205,8 @@
   }
 
   &__redline {
-    width: 1659px;
+    width: 100%;
+    // width: 1659px;
     height: 14px;
     left: 240px;
     margin-top: 120px;
