--- a/src/scss/blocks/migration/migrate.scss
+++ b/src/scss/blocks/migration/migrate.scss
@@ -147,7 +147,8 @@
 
   &__blackline {
     // position: absolute;
-    width: 1659px;
+    width: 100%;
+    // width: 1659px;
     height: 14px;
     left: 240px;
     margin-top: 120px;
