--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -452,13 +452,15 @@
       flex-direction: column;
       width: 100%;
     }
-   &__form {
-     margin-top: 40px;
-   }
+
+    &__form {
+      margin-top: 40px;
+    }
+
     &__columns {
-      
-        width: 100%;
-      
+
+      width: 100%;
+
     }
 
     // &__form {
@@ -746,11 +748,11 @@
     &__col-2 {
       margin-left: 32px;
     }
-  } 
+  }
 
   .footer__columns_h2 {
     margin-top: 65px;
-}
+  }
 
 }
 
@@ -955,6 +957,7 @@
       flex-direction: column;
       margin: 60px auto 60px auto;
     }
+
     &__polycy {
       margin-top: 20px;
     }
@@ -1009,7 +1012,7 @@
     // }
     &__h2 {
       width: 100%;
-      height: 100%;
+      height: 100px;
       text-align: center;
 
     }
@@ -1224,40 +1227,60 @@
   }
 
   .footer {
+    &__copyright {
+      text-align: center;
+    }
+    &__input {
+      input {
+        outline: none;
+        padding: 10px 0px;
+
+      }
+    }
+
+      &__textarea { 
+        textarea {
+        // padding-bottom:-10;
+        // padding-top: 0;
+        outline: none;
+    }
+      }
+
+    &__policy {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    &__triggers {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     &__form {
-        display: flex;
-        flex-direction: column;
-      // display: grid;
-      // grid-template: 42px 42px 42px 42px 42px/repeat(1, auto);
-      // grid-row: 42px 42px 42px 42px 42px;
-      // grid-column: 100%;
-      // justify-content: space-between;
-      // row-gap: 50px;
-      // column-gap: 25px;
-  }
+      display: flex;
+      flex-direction: column;
+
+    }
+
     &__columns {
       &_h2 {
         text-align: center;
       }
+
       &_descr {
         text-align: center;
         height: 100%;
       }
-      &__triggers {
-        display: flex;
-        flex-direction: column;
-        // justify-content: center;
-      }
-      
+
     }
+
     // &__wraper {
     //   display: flex;
     //   flex-direction: column;
     //   margin: 60px auto 60px auto;
     // }
-    // &__polycy {
-    //   margin-top: 20px;
-    // }
+
   }
 }
 
