--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -4,3 +4,4 @@ $balsamic-reduction: #40403D;
 $background-eternity: #282827;
 $titanium-white: #E5E5E5;
 $holland-red: #CB4544;
+$hidden-menu: orange;
