--- a/src/scss/blocks/header/_header.scss
+++ b/src/scss/blocks/header/_header.scss
@@ -40,7 +40,7 @@ nav {
     line-height: 25px;
     text-align: right;
     color: $ambience-white;
-
+    width: 157px;
     a {
       text-decoration: none;
 
@@ -144,3 +144,113 @@ nav {
   }
  
 }
+
+// .hiddenmenu {
+//   display: none;
+// }
+// .active {
+//   left: 0;
+//   visibility: visible;
+//   opacity: 1;
+
+// }
+
+.hiddenmenu {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.6s;
+
+  // left: 0;
+  // visibility: visible;
+  // opacity: 1;
+  &.active {
+      left: 0;
+      visibility: visible;
+      opacity: 1;
+  
+  }
+  &__block {
+      position: relative;
+      transition: all 0.6s;
+      width: 345px;
+      background-color: $hidden-menu;
+      height: 100%;
+      padding-top: 140px;
+      padding-left: 40px;
+      z-index: 10;
+  }
+  &__close {
+      position: absolute;
+      top: 25px;
+      right: 25px;
+      cursor: pointer;
+  }
+  &__list {
+      list-style-type: none;
+      padding-left: 35px;
+  }
+  &__link {
+      position: relative;
+      text-align: left;
+      font-size: 30px;
+      margin-bottom: 15px;
+      
+      &::before {
+          content: '';
+          position: absolute;
+          left: -35px;
+          top: 12px;
+          width: 15px;
+          height: 15px;
+          border-radius: 100%;
+          border: 1px solid #000;
+          transition: all 0.6s;
+      }
+      &:hover {
+          &::before {
+              background-color: #fff;
+          }
+      }
+      a {
+          text-decoration: none;
+          color: #000;
+          &:hover {
+              color: #999;
+          }
+      }
+  }
+  &__sotial {
+      position: absolute;
+      width: 90px;
+      left: 50%;
+      transform: translate(-50%);
+      bottom: 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      &_link {
+          &:hover {
+              svg path {
+                  fill: #999;
+              }
+          }
+      }
+  }
+  &__overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(255, 255, 255);
+      opacity: 0.75;
+      z-index: 9;
+  }
+}
+    
