--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1434,6 +1434,23 @@
       font-size: 32px;
       text-align: center;
     }
+    &__prev {
+      text-align: center;
+    }
+    &__anypoint {
+      text-align: center;
+    }
+    &__slash {
+      display: block;
+      margin: 0 auto;
+      margin-top: 30px;
+    }
+    &__descr {
+      text-align: center;
+    }
+    &__arrows {
+      text-align: center;
+    }
   }
 
 
