--- a/src/scss/blocks/approach/approach.scss
+++ b/src/scss/blocks/approach/approach.scss
@@ -16,7 +16,6 @@
   }
 
   &__btn {
-
     position: absolute;
     margin-left: 1230px;
     width: 208px;
@@ -25,6 +24,10 @@
     border: 2px solid $ambience-white;
     background-color: $background-eternity;
     color: $ambience-white;
+    &:hover {
+      border-color: $holland-red;
+      color: $holland-red;
+    }
   }
 
   &__row {
@@ -59,6 +62,7 @@
           // transform: rotate(-180deg);
       }
     }
+    
 
     &_header {
       margin-top: 40px;
