--- a/src/scss/blocks/header/_header.scss
+++ b/src/scss/blocks/header/_header.scss
@@ -31,25 +31,25 @@ nav {
   margin-left: 310px;
   list-style-type: none;
 
-  &__contacts_phone {
-    margin-top: 43px;
-    margin-left: 55px;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 25px;
-    text-align: right;
-    color: $ambience-white;
-    width: 157px;
+  &__contacts {
+    &_phone {
+      margin-top: 43px;
+      margin-left: 55px;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 25px;
+      text-align: right;
+      color: $ambience-white;
+      width: 157px;
+      &:hover {
+        color: $holland-red;
+      }
+    }
     a {
       text-decoration: none;
 
-      &:hover {
-
-        color: #999;
-      }
     }
-
   }
 
   &__hr-under {
@@ -78,6 +78,7 @@ nav {
     margin-left: 20px;
     width: 26px;
     height: 22px;
+    
   }
 
   &__hr {
@@ -118,42 +119,50 @@ nav {
 
 
 }
+
 .hamburger {
   display: none;
   margin-left: 42px;
   margin-top: 36px;
   right: 30px;
-  height: 21px;
+  // height: 21px;
+  height: 60%;
   cursor: pointer;
+
   &::before {
     content: "";
-        display: block;
-        position: absolute;
-        width: 2px;
-        height: 70px;
-        transform: translate(-21px, -16px);
-        background-color: $balsamic-reduction
+    display: block;
+    position: absolute;
+    width: 2px;
+    height: 70px;
+    transform: translate(-21px, -16px);
+    background-color: $balsamic-reduction
   }
+&__hover {
 
+  &:hover {
+    &:nth-child(odd) {
+      background-color: $holland-red;
+    }
+    &:nth-child(even) {
+      background-color: $holland-red;
+    }
+    }
+}
   span {
-      display: block;
-      background-color: $ambience-white;
-      width: 30px;
-      height: 3px;
-      margin-top: 8px;
+    display: block;
+    background-color: $ambience-white;
+    width: 30px;
+    height: 3px;
+    margin-top: 8px;
+    
+ 
+    
   }
  
+
 }
 
-// .hiddenmenu {
-//   display: none;
-// }
-// .active {
-//   left: 0;
-//   visibility: visible;
-//   opacity: 1;
-
-// }
 
 .hiddenmenu {
   position: fixed;
@@ -170,87 +179,100 @@ nav {
   // visibility: visible;
   // opacity: 1;
   &.active {
-      left: 0;
-      visibility: visible;
-      opacity: 1;
-  
+    left: 0;
+    visibility: visible;
+    opacity: 1;
+
   }
+
   &__block {
-      position: relative;
-      transition: all 0.6s;
-      width: 345px;
-      background-color: $hidden-menu;
-      height: 100%;
-      padding-top: 140px;
-      padding-left: 40px;
-      z-index: 10;
+    position: relative;
+    transition: all 0.6s;
+    width: 345px;
+    background-color: $hidden-menu;
+    height: 100%;
+    padding-top: 140px;
+    padding-left: 40px;
+    z-index: 10;
   }
+
   &__close {
-      position: absolute;
-      top: 25px;
-      right: 25px;
-      cursor: pointer;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    cursor: pointer;
+    &:hover {
+      color: $holland-red;
+    }
+    // background-color: $hidden-menu-text;
   }
+
   &__list {
-      list-style-type: none;
-      padding-left: 35px;
+    list-style-type: none;
+    padding-left: 35px;
   }
+
   &__link {
-      position: relative;
-      text-align: left;
-      font-size: 30px;
-      margin-bottom: 15px;
-      
-      &::before {
-          content: '';
-          position: absolute;
-          left: -35px;
-          top: 12px;
-          width: 15px;
-          height: 15px;
-          border-radius: 100%;
-          border: 1px solid #000;
-          transition: all 0.6s;
-      }
-      &:hover {
-          &::before {
-              background-color: #fff;
-          }
-      }
-      a {
-          text-decoration: none;
-          color: #000;
-          &:hover {
-              color: #999;
-          }
-      }
-  }
-  &__sotial {
+    position: relative;
+    text-align: left;
+    font-size: 30px;
+    margin-bottom: 15px;
+
+    &::before {
+      content: '';
       position: absolute;
-      width: 90px;
-      left: 50%;
-      transform: translate(-50%);
-      bottom: 50px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      &_link {
-          &:hover {
-              svg path {
-                  fill: #999;
-              }
-          }
+      left: -35px;
+      top: 12px;
+      width: 15px;
+      height: 15px;
+      border-radius: 100%;
+      border: 1px solid $hidden-menu-text;
+      transition: all 0.6s;
+    }
+
+    &:hover {
+      &::before {
+        background-color: $hidden-menu-text;
       }
+    }
+
+    a {
+      text-decoration: none;
+      color: $hidden-menu-text;
+
+      &:hover {
+        color: $hidden-menu-hover;
+      }
+    }
   }
+
+  &__sotial {
+    position: absolute;
+    width: 90px;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &_link {
+      &:hover {
+        svg path {
+          fill: $hidden-menu-hover;
+        }
+      }
+    }
+  }
+
   &__overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgb(255, 255, 255);
-      opacity: 0.75;
-      z-index: 9;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $hidden-menu-overlay;
+    opacity: 0.75;
+    z-index: 9;
   }
 }
-    
