--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -4,4 +4,7 @@ $balsamic-reduction: #40403D;
 $background-eternity: #282827;
 $titanium-white: #E5E5E5;
 $holland-red: #CB4544;
-$hidden-menu: orange;
+$hidden-menu: rgb(0, 0, 0);
+$hidden-menu-text: #E5E5E5;
+$hidden-menu-hover: #CB4544;
+$hidden-menu-overlay: #E5E5E5;
