--- a/src/scss/blocks/footer/footer.scss
+++ b/src/scss/blocks/footer/footer.scss
@@ -248,14 +248,26 @@
   }
 
   &__policy {
-    // font-style: normal;
-    // font-weight: 400;
-    // font-size: 14px;
-    // line-height: 19px;
-    // // text-align: right;
+    label {
+      position: relative;
+      display: block;
+      padding: 0;
+      
 
-    color: $background-eternity;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 22px;
+      color: $industrial-revolution;
 
+      font-size: 12px;
+      margin-bottom: 0;
+      top: 0px;
+      left: 0px;
+      text-align: none;
+     
+    }
+     color: $background-eternity;
     span {
 
       a {
